--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy": "sst deploy",
     "remove": "sst remove",
     "console": "sst console",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "sst bind vitest run",
+    "test:watch": "sst bind vitest --watch run"
   },
   "devDependencies": {
     "@tsconfig/node20": "20.1.4",
