--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "3.515.0",
     "@aws-sdk/client-bedrock-runtime": "^3.525.0",
     "@aws-sdk/client-comprehend": "^3.525.0",
+    "@aws-sdk/util-dynamodb": "3.515.0",
     "aws-lambda": "1.0.7",
     "sst": "^2.40.6"
   },
