--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev:backend": "sst dev",
+    "dev:backend": "npm run types && sst dev",
     "dev:frontend": "npm run dev -w web",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "build": "sst build",
+    "build": "npm run types && sst build",
     "deploy": "sst deploy",
     "remove": "sst remove",
     "console": "sst console",
+    "types": "npm run --workspace packages/core types",
     "typecheck": "tsc --noEmit",
-    "test": "sst bind vitest run",
+    "test": "sst bind \"vitest run --coverage\"",
     "test:watch": "sst bind vitest --watch run"
   },
   "devDependencies": {
@@ -21,7 +22,9 @@
     "concurrently": "8.2.2",
     "constructs": "10.3.0",
     "sst": "2.40.6",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "@vitest/coverage-istanbul": "1.6.0",
+    "vitest": "1.6.0"
   },
   "workspaces": [
     "packages/api",
