--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,10 +14,10 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "zod": "^3.22.4",
     "axios": "^1.6.7",
     "axios-retry": "^4.0.0",
     "google-auth-library": "^9.6.3",
-    "googleapis": "^134.0.0",
-    "joi": "^17.12.2"
+    "googleapis": "^134.0.0"
   }
 }
